--- a/caffe.topmonks.cz/src/stylesheets/footer.scss
+++ b/caffe.topmonks.cz/src/stylesheets/footer.scss
@@ -1,51 +1,60 @@
-.tm-footer {
+.footer {
   content-visibility: auto;
-  background-color: #233341;
-  color: #fff;
-}
-
-.tm-footer h2 {
-  color: #fff;
-  font-weight: 500;
-  text-align: left;
-}
-
-.tm-footer a {
-  color: #fff;
-  text-decoration: underline;
-  text-decoration-color: rgba(256, 256, 256, 0.5);
-  transition: text-decoration-color 0.2s linear;
-  &:hover {
-    text-decoration-color: rgba(256, 256, 256, 1);
-    transition: text-decoration-color 0.2s linear;
+  background-color: #BB9EAA;
+  color: #2E2C49;
+  h2 {
+    font-size: 1.5em;
+    font-weight: 500;
+    text-align: left;
   }
-  @media screen and (max-width: 479px) {
+  ul {
+    padding-left: 0;
+    li {
+      display: block;
+      padding-left: 0;
+      list-style: none;
+    }
+  }
+  a {
+    color: #2E2C49;
+    text-decoration: none;
+    transition: all 0.4s ease;
+    &:hover {
+      text-decoration:underline;
+    }
+    @media screen and (max-width: 479px) {
+      display: inline-block;
+      padding: 4px 0;
+      margin: 4px 0;
+    }
+  }
+  .social-buttons {
+    background-color: transparent;
+    border: 1px solid #2E2C49;
+    border-radius: 52px;
     display: inline-block;
-    padding: 4px 0;
-    margin: 4px 0;
+    margin-top: 14px;
+    a {
+    display: inline-block;
+    height: 32px;
+    margin: 0;
+    &:first-child{
+      padding-left: 6px;
+    }
+    &:last-child {
+      padding-right: 6px;
+    }
+    @media screen and (max-width: 339px) {
+      padding: 4px 8px 0;
+    }
+    @media screen and (min-width: 340px) {
+      padding: 4px 12px 0;
+    }
   }
 }
-
-.social-buttons {
-  background-color: #fff;
-  border-radius: 52px;
-  display: inline-block;
-  margin-top: 14px;
+@media screen and (min-width: 840px) {
+  .footer_social-buttons {
+    text-align: right;
+  }
 }
-.social-buttons a {
-  display: inline-block;
-  height: 32px;
-  margin: 0;
-  &:first-child{
-    padding-left: 6px;
-  }
-  &:last-child {
-    padding-right: 6px;
-  }
-  @media screen and (max-width: 339px) {
-    padding: 4px 8px 0;
-  }
-  @media screen and (min-width: 340px) {
-    padding: 4px 12px 0;
-  }
 }
