--- a/caffe.topmonks.cz/src/stylesheets/header.scss
+++ b/caffe.topmonks.cz/src/stylesheets/header.scss
@@ -150,12 +150,17 @@
   @media screen and (min-width: 1024px) {
     a {
       font-weight: 600;
-      border-bottom: 1px solid transparent;
     }
     a:hover {
-      padding-bottom: 14px;
-      border-bottom: 1px solid white;
+      transform: translateY(-7px);
     }
+    li {
+      transition: all 0.3s ease 0s;
+    &:hover {
+  transform: translateY(8px);
+    }
+    }
+
   }
   @media screen and (max-width: 839px) {
     width: 100vw;
