--- a/caffe.topmonks.cz/src/stylesheets/typography.scss
+++ b/caffe.topmonks.cz/src/stylesheets/typography.scss
@@ -3,7 +3,7 @@
   --topmonks-caffe-pink: #f64060;
   --topmonks-caffe-dark_blue: #233341;
 
-  --tm-btn-transition: all 100ms ease-in-out;
+  --tm-btn-transition: all 200ms ease-in-out;
 }
 
 /*
@@ -31,32 +31,26 @@ h1 {
 }
 
 h2 {
-  font-size: 2em;
-  font-weight: normal;
+  font-size: 2.5em;
+  font-weight: 500;
+  margin: 18px 0;
+}
 
-  &.h2_margin {
-    margin-bottom: 0;
-  }
+h3 {
+  font-size: 1em;
+  font-weight: 600;
 }
 
 p {
-  font-size: 1.125em;
+  font-size: 1.125em; //18px
   font-weight: normal;
-  line-height: 1.6;
+  line-height: 1.75em; //28px
 }
 
 a {
   color: #ffffff;
   font-weight: normal;
   text-decoration: none;
-
-  .btn_light {
-    color: #ffffff;
-  }
-
-  .btn_dark {
-    color: var(--topmonks-caffe-dark_blue);
-  }
 }
 
 @media (max-width: 839px) {
@@ -87,6 +81,46 @@ a {
 }
 
 body {
+  .btn {
+    cursor: pointer;
+    border: 2px solid;
+    border-radius: 100px;
+    width: fit-content;
+    transition: var(--tm-btn-transition);
+  
+    @media screen and (min-width: 840px) {
+      padding: 14px 36px;
+    }
+    @media (max-width: 839px) {
+      font-size: 1em;
+      padding: 10px 18px;
+    }
+    a {
+      font-weight: 500;
+      color: #fff;
+    }
+  }
+
+  .btn--fill {
+    background-color: #5A42CC;
+    border-color:#5A42CC;
+    &:hover {
+      background-color: transparent;
+      border-color: #5A42CC;
+      a {
+        color: #5A42CC;
+      }
+  }
+  }
+
+  .btn--outlined {
+    background-color: transparent;
+    border-color:#fff;
+  }
+
+
+
+
   ul,
   ul li {
     padding: 0;
