Topmonks.caffe - Změna bg footeru

--- a/caffe.topmonks.cz/src/stylesheets/footer.scss
+++ b/caffe.topmonks.cz/src/stylesheets/footer.scss
@@ -1,10 +1,10 @@
 .footer {
   content-visibility: auto;
   background: linear-gradient(
-      to bottom right,
-      #BB9EAA 0,
-     #7278DF 78%
-    );
+    to bottom right,
+    #7278DF 0,
+   #BB9EAA 78%
+  );
   color: #fff;
   h2 {
     font-size: 1.5em;
