--- a/caffe.topmonks.cz/src/stylesheets/footer.scss
+++ b/caffe.topmonks.cz/src/stylesheets/footer.scss
@@ -1,11 +1,7 @@
 .footer {
   content-visibility: auto;
-  background: linear-gradient(
-    to bottom right,
-    #7278DF 0,
-   #BB9EAA 78%
-  );
-  color: #fff;
+  background-color: #BB9EAA;
+  color: #2E2C49;
   h2 {
     font-size: 1.5em;
     font-weight: 500;
@@ -20,7 +16,7 @@
     }
   }
   a {
-    color: #fff;
+    color: #2E2C49;
     text-decoration: none;
     transition: all 0.4s ease;
     &:hover {
@@ -33,8 +29,8 @@
     }
   }
   .social-buttons {
-    background-color: #fff;
-    border: 1px solid #fff;
+    background-color: transparent;
+    border: 1px solid #2E2C49;
     border-radius: 52px;
     display: inline-block;
     margin-top: 14px;
