Topmonks.caffe - Změna theme-color

--- a/caffe.topmonks.cz/src/html/index.njk
+++ b/caffe.topmonks.cz/src/html/index.njk
@@ -16,7 +16,7 @@
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link rel="preconnect" href="https://res.cloudinary.com">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
-  <meta name="theme-color" content="#F06B4F">
+  <meta name="theme-color" content="#2E2C49">
   <meta name="description"
         content="Teach or die, learn or die. Každé první úterý v měsíci se setkáváme, přednášíme a diskutujeme o tématech, která nás baví.">
   <link rel="canonical" href="https://caffe.topmonks.cz/">
