--- a/caffe.topmonks.cz/src/stylesheets/footer.scss
+++ b/caffe.topmonks.cz/src/stylesheets/footer.scss
@@ -30,7 +30,6 @@
   }
   .social-buttons {
     background-color: transparent;
-    border: 1px solid #2E2C49;
     border-radius: 52px;
     display: inline-block;
     margin-top: 14px;
@@ -44,11 +43,14 @@
     &:last-child {
       padding-right: 6px;
     }
-    @media screen and (max-width: 339px) {
-      padding: 4px 8px 0;
+    @media screen and (min-width: 840px) {
+      border: 1px solid #2E2C49;
     }
     @media screen and (min-width: 340px) {
       padding: 4px 12px 0;
+    }
+    @media (max-width: 339px) {
+      padding: 4px 8px 0;
     }
   }
 }
