--- a/caffe.topmonks.cz/src/stylesheets/header.scss
+++ b/caffe.topmonks.cz/src/stylesheets/header.scss
@@ -1,8 +1,8 @@
 // HEADER //
 .tm-logo {
   font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
-  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-  "Segoe UI Symbol";
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   display: flex;
   align-items: center;
   font-size: 24px;
@@ -11,7 +11,7 @@
   letter-spacing: -1px;
   text-decoration: none;
   text-transform: uppercase;
-  color: #2E2C49;
+  color: #2e2c49;
   @media screen and (max-width: 479px) {
     font-size: 24px;
     padding-top: 2px;
@@ -21,7 +21,7 @@
     font-size: 24px;
     padding-top: 2px;
     justify-content: flex-end;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 
   .monk {
@@ -82,20 +82,17 @@
   .tm-hamburger__container--open {
     .tm-hamburger__bar:first-of-type {
       transform: rotate(-45deg);
-      background-color: #FFFFFF;
-
+      background-color: #ffffff;
     }
 
     .tm-hamburger__bar:nth-of-type(2) {
       opacity: 0;
-      background-color: #FFFFFF;
-
+      background-color: #ffffff;
     }
 
     .tm-hamburger__bar:last-of-type {
       transform: rotate(45deg);
-      background-color: #FFFFFF;
-
+      background-color: #ffffff;
     }
   }
 }
@@ -109,7 +106,7 @@
   height: 70px;
   @media screen and (max-width: 839px) {
     position: fixed;
-    background-color: #2E2C49;
+    background-color: #2e2c49;
   }
   @media screen and (min-width: 840px) {
     padding: 16px 0;
@@ -123,25 +120,35 @@
   @media screen and (max-width: 839px) {
     position: fixed;
     .tm-hamburger__container::after {
-      color: #FFFFFF;
+      color: #ffffff;
       vertical-align: center;
     }
     .tm-hamburger__bar {
-      background-color: #2E2C49;
-    }
-    .tm-menu {
-      transform: translate(-300px, -64px);
-      z-index: -1;
+      background-color: #2e2c49;
     }
     .tm-menu__list {
       display: inline-grid;
       width: 100%;
-      background: linear-gradient(to bottom right, #BA3CD9 0, var(--topmonks-caffe-orange) 58%);
-      padding: 16px 0;
+      background: linear-gradient(to right, #2e2c49 0, #444076 50%);
+      padding: 18px 0;
+      margin-top: 10px;
+
       a {
         color: white;
         text-align: left;
       }
+    }
+  }
+  @media (max-width: 639px) {
+    .tm-menu {
+      transform: translate(-300px, -64px);
+      z-index: -1;
+    }
+  }
+  @media (min-width: 640px) and (max-width: 839px) {
+    .tm-menu {
+      transform: translate(-500px, -64px);
+      z-index: -1;
     }
   }
 }
@@ -156,11 +163,10 @@
     }
     li {
       transition: all 0.3s ease 0s;
-    &:hover {
-  transform: translateY(8px);
+      &:hover {
+        transform: translateY(8px);
+      }
     }
-    }
-
   }
   @media screen and (max-width: 839px) {
     width: 100vw;
@@ -175,8 +181,7 @@
     background-color: var(--tm-secondary);
 
     .tm-menu__list li {
-      margin: 0 24px;
-      border-bottom: 1px solid transparent;
+      margin-left: 24px;
     }
     .tm-menu__list li + li {
       border-top: 1px solid rgba(45, 61, 144, 0.5);
@@ -210,10 +215,6 @@
 .tm-menu--horizontal .tm-menu__list a {
   display: inline-block;
   padding: 4px 8px;
-}
-
-.tm-menu--horizontal .tm-menu__list li + li {
-  margin-left: 4px;
 }
 
 .tm-text--margin-top {
