TopMonks.caffe - Oprava stylu ve footer

--- a/caffe.topmonks.cz/src/stylesheets/footer.scss
+++ b/caffe.topmonks.cz/src/stylesheets/footer.scss
@@ -31,17 +31,17 @@
     display: inline-block;
     height: 32px;
     margin: 0;
-    &:first-child{
-      padding-left: 6px;
-    }
-    &:last-child {
-      padding-right: 6px;
-    }
-    @media screen and (min-width: 340px) {
+    @media screen and (min-width: 840px) {
       padding: 4px 12px 0;
+      &:first-child{
+        padding-left: 6px;
+      }
+      &:last-child {
+        padding-right: 6px;
+      }
     }
-    @media (max-width: 339px) {
-      padding: 4px 8px 0;
+    @media (max-width: 839px) {
+      padding: 4px;
     }
   }
 }
